# efficient-llm-finetuning

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  requirements.txt
configs/: data_config.yaml  eval_config.yaml  model_config.yaml  ptq_config.yaml  qat_config.yaml  sensitivity_config.yaml  train_lora.yaml  train_qlora.yaml
docs/: folder_structure.md  results.md
docs/concepts/: causal_lm_tokenization.md  evaluation.md  failure_analysis.md  interview_qa.md  lora.md  metrics.md  ptq.md  qat.md  qlora.md
docs/results/: qlora_results.md
outputs/predictions/: _qat_block3_module2_4bits_steps250_20260506_183257_cnndaily_20260507_052630_preds.jsonl  base_mistral7bv03_cnndaily_20260416_211313_preds.jsonl  lora_peft_mistral7bv03_cnndaily_20260420_073304_preds.jsonl  lora_peft_r2_a4_lr0.0002_20260501_101659_mistral7bv03_cnndaily_20260502_023138_preds.jsonl  lora_peft_r32_a64_lr0.0002_20260501_175558_mistral7bv03_cnndaily_20260501_202654_preds.jsonl  lora_peft_r4_a8_lr0.0002_20260501_101920_mistral7bv03_cnndaily_20260502_023358_preds.jsonl  (+18 more)
scripts/: run_baseline.sh  run_compare.sh  run_evaluate_compare.sh  run_evaluate_perf.sh  run_evaluate_task.sh  run_gptq_int4.sh  run_infer_base.sh  run_infer_lora.sh  run_infer_lora_peft.sh  run_infer_qlora.sh  run_lora.sh  run_lora_peft.sh  run_ptq_awq_int4.sh  run_ptq_gptq_int4.sh  run_ptq_int8.sh  run_ptq_nf4.sh  run_qat.sh  run_qlora.sh  run_sensitivity.sh
tests/: commands.txt  test_lora_layer.py  test_ptq_pipeline.py  test_sensitivity.py  test_train_lora_smoke.py  test_train_qlora_smoke.py
(+89 files in other folders)
